--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         text-align: center;
     }
 
+    h1 {
+        font-size: 40px;
+    }
+
     @media (min-width: 768px) {
         .container {
             max-width: 730px;
@@ -31,7 +35,7 @@
     }
 
     .btn.other {
-        width: 190px;
+        width: 180px;
     }
 
     .equation {
@@ -52,8 +56,8 @@
         <p class="explanation">
             Why do people keep asking to find the next term in sequences?
             Anyone with real math knowledge knows there are infinite answers.
-            So, from now on, for any sequence I see, the next term will
-            always the same:
+            So, from now on, the next term for any sequence I see will
+            always be the same:
         </p>
         <h1 class="title">It Is Actually 42</h1>
 
