--- a/index.html
+++ b/index.html
@@ -32,10 +32,13 @@
 
     .btn.function {
         width: 120px;
+        max-size: 49%;
+
     }
 
     .btn.other {
         width: 180px;
+        max-width: 49%;
     }
 
     .equation {
@@ -80,7 +83,7 @@
                 <input type="radio" name="other" id="is_42" autocomplete="off" checked> Is actually 42
             </label>
             <label class="btn btn-primary other">
-                <input type="radio" name="other" id="is_other" autocomplete="off"> Try something else
+                <input type="radio" name="other" id="is_other" autocomplete="off"> Something else
             </label>
         </p>
 
