--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     e.preventDefault();
                 }
             }).prop('disabled', false);
-            $('#is_function,#is_sequence,#is_42,#is_other').on('change', colorize)
+            $('#is_function,#is_sequence,#is_42,#is_other').on('change', colorize3)
             $(window).on('hashchange', function () {
                 triggerHash(false);
             });
