--- a/index.html
+++ b/index.html
@@ -6,23 +6,72 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>It Is Actually 42</title>
+    <link href='material/bootstrap.min.css' rel='stylesheet' type='text/css'>
+    <link href='material/material.min.css' rel='stylesheet' type='text/css'>
+    <link href='material/ripples.min.css' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Roboto:500,300,700,400' rel='stylesheet' type='text/css'>
+
     <style>
         body {
             text-align: center;
         }
 
-        h1 {
-            font-size: 40px;
+        .header {
+            background-color: #00aff0;
+            box-shadow: 0 1px 0 #00a6e4;
+            color: #fff;
+            padding: 15px;
+            margin-bottom: 30px;
         }
+
+        .header .checkbox {
+            display: inline-block;
+        }
+        .header .checkbox .ripple {
+            display: inline-block;
+            top: -1px;
+            left: -4px;
+        }
+
+        .header .checkbox label {
+            text-align: left;
+            width: 180px;
+            border: 2px solid #fff;
+            padding: 5px 5px 10px 15px;
+            margin: 0px 5px;
+            -webkit-border-radius: 5px;
+            -moz-border-radius: 5px;
+            border-radius: 5px;
+        }
+
+        .header .checkbox input[type=checkbox]:checked~.check,
+        .header .checkbox input[type=checkbox]:checked~.check:before,
+        .header .checkbox-default input[type=checkbox]:checked~.check:before
+         {
+            color: #eee;
+        }
+
+
+        .header h1 {
+            color: #fff;
+            font-weight: bold;
+        }
+
+        .header span.title {
+            position: relative;
+            top: 20px;
+            font-weight: 300;
+            font-size: 14px;
+        }
+
 
         #sequence {
             width: 100%;
             max-width: 600px;
             font-size: 20px;
             padding: 5px;
-            box-sizing: border-box;
-            -webkit-box-sizing:border-box;
-            -moz-box-sizing: border-box;
+            color: #666666;
+            border: none;
         }
 
         .btn.function {
@@ -42,6 +91,15 @@
             left: 0;
             right: 0;
         }
+
+        #result p {
+            margin: 20px;
+        }
+
+        .next-term {
+            font-size: 32px;
+        }
+
         .explanation {
             margin-top: 20px;
         }
@@ -55,36 +113,44 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <p>
-            Next term of the sequence? It is actually 42.
-        </p>
+    <div class="header">
+        <span class="title">Next term of the sequence?</span>
+        <h1>It is actually 42</h1>
         <p class="sequences">
-            <input id="sequence" disabled="disabled"></textarea>
+            <input id="sequence" disabled="disabled"></input>
+
         </p>
 
-        <p>
-            <label>
-                <input type="checkbox" id="is_function"> $f(x) = y$
+        <div class="checkbox">
+            <label class="option">
+                <input type="checkbox" id="is_function" />
+                <span class="ripple"></span>
+                <span class="check"></span>
+                is a function
             </label>
-            <label>
-                <input type="checkbox" id="is_other"> $S_{next} \neq 42$
-            </label>
-        </p>
-
-        <hr/>
-
-        <div id="result">
-
         </div>
 
-        <div id="graph"></div>
+        <div class="checkbox">
+            <label class="option">
+                <input type="checkbox" id="is_other" />
+                <span class="ripple"></span>
+                <span class="check"></span>
+                not actually 42
+            </label>
+        </div>
     </div>
+    <div id="result">
+
+    </div>
+
+    <div id="graph"></div>
 
     <script src="jquery-2.1.1.min.js"></script>
     <script src="underscore-min.js"></script>
+    <script src="material/bootstrap.min.js"></script>
+    <script src="material/material.min.js"></script>
+    <script src="material/ripples.min.js"></script>
     <script src="flot/jquery.flot.min.js"></script>
-    <script src="flot/jquery.flot.navigate.min.js"></script>
     <script src="mathjax/MathJax.js">
         MathJax.Hub.Config({
             extensions: ["tex2jax.js"],
